--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Be sure to change these!
-base_url = "https://pawroman.github.io/zola-theme-terminimal"
+base_url = "https://shibedrill.site"
 title = "Shibe Drill | Official Website"
 
 # Sass compilation is required
