--- a/config.toml
+++ b/config.toml
@@ -84,8 +84,8 @@ use_full_hack_font = false
 #           Mimetype defaults to "image/x-icon".
 #           The URL should point at a file located
 #           in your site's "static" directory.
-# favicon = "/favicon.png"
-# favicon_mimetype = "image/png"
+favicon = "/favicon.png"
+favicon_mimetype = "image/png"
 
 # Optional: Set how <title> elements are rendered.
 # Values:
